# neurax4

./: .gitignore  .replit  ANALYSE_COMPLETE_NEURAX2_RESULTATS.md  GUIDE_COMPLET_OPTIMISATION_NEURAX3.md  GUIDE_UTILISATION_OPTIMISATIONS_NEURAX3.md  INSTRUCTIONS_COMPLEMENT_KAGGLE.md  INSTRUCTIONS_FINALES_KAGGLE.md  INSTRUCTIONS_OPTIMISATION_NEURAX3.md  RAPPORT_FINAL_IMPLEMENTATION_KAGGLE.md  RAPPORT_FINAL_NEURAX2.md  RAPPORT_FINAL_NEURAX3.md  RAPPORT_FINAL_OPTIMISATIONS_NEURAX3.md  VALIDATION_COMPLETE_NEURAX2_2025.md  analyse_complete_finale.md  analyse_complete_neurax2.md  analyse_complete_neurax3_arc_system.md  analyse_detaillee_systeme_quantique_2025.md  analyse_neurax2.md  analyse_optimisations_neurax2.md  analyse_resultats_reels.md  analyse_systeme_quantique.md  arc_batch_test_evaluation_20250514_173330.csv  arc_batch_test_evaluation_20250514_173330.json  arc_batch_test_evaluation_20250514_173330_summary.json  arc_batch_test_test_20250514_173330.csv  arc_batch_test_test_20250514_173330.json  arc_batch_test_test_20250514_173330_summary.json  arc_batch_test_training_20250514_173221.json  arc_batch_test_training_20250514_173321.csv  arc_batch_test_training_20250514_173321.json  arc_batch_test_training_20250514_173321_summary.json  arc_batch_test_training_20250514_173330.csv  arc_batch_test_training_20250514_173330.json  arc_batch_test_training_20250514_173330_summary.json  arc_puzzles_results.csv  arc_tests_results.csv  arc_tests_results.json  benchmark_mobile.py  benchmark_mobile_results.json  benchmark_results.json  (+63 more)
temp/: .replit  analyse_resultats_reels.md  main.py  (+13 more)
(+1506 files in other folders)
